# pg_wait_sampling

./: .gitignore  .travis.yml  Dockerfile.tmpl  LICENSE  META.json  Makefile  README.md  collector.c  compat.c  compat.h  meson.build  pg_wait_sampling--1.0--1.1.sql  pg_wait_sampling--1.1--1.2.sql  pg_wait_sampling--1.1.sql  pg_wait_sampling--1.2.sql  pg_wait_sampling.c  pg_wait_sampling.control  pg_wait_sampling.h  run-tests.sh  run_tests.sh
.github/workflows/: pgws-ci.yml
debian/: changelog  control  control.in  rules  watch
expected/: bfv_queryid_for_relation_lock.out  load.out  load_1.out  queries.out  queryid.out
specs/: bfv_queryid_for_relation_lock.spec  queryid.spec
sql/: queries.sql
